Fix wrong margin under search-area divider

--- a/react/src/styles/App.module.scss
+++ b/react/src/styles/App.module.scss
@@ -2768,6 +2768,9 @@ a {
             margin: 0 $section-padding;
         }
     }
+    .search-area & {
+        margin-bottom: 0;
+    }
 }
 
 
